# confconv-tutorial

./: README.md
chapters/01-hello-cli/: README.md
chapters/01-hello-cli/confconv/: Cargo.toml
chapters/01-hello-cli/confconv/src/: main.rs
chapters/02-options-flags/: README.md
chapters/02-options-flags/confconv/: Cargo.toml
chapters/02-options-flags/confconv/src/: main.rs
chapters/03-serde-convert/: README.md
chapters/03-serde-convert/confconv/: Cargo.toml
chapters/03-serde-convert/confconv/src/: convert.rs  main.rs
chapters/04-subcommands/: README.md
chapters/04-subcommands/confconv/: Cargo.toml
chapters/04-subcommands/confconv/src/: cli.rs  convert.rs  format.rs  main.rs
chapters/05-advanced/: README.md
chapters/05-advanced/confconv/: Cargo.toml
chapters/05-advanced/confconv/src/: cli.rs  convert.rs  format.rs  main.rs
chapters/06-production/: README.md
chapters/06-production/confconv/: Cargo.toml
chapters/06-production/confconv/src/: cli.rs  error.rs  format.rs  main.rs
chapters/06-production/confconv/src/commands/: convert.rs  format.rs  mod.rs  validate.rs
