[package]
name = "confconv"                       # 包名，也是默认的二进制名称
version = "0.1.0"                       # 语义化版本号
edition = "2021"                        # Rust edition
description = "配置文件格式转换工具"      # 包描述
readme = "README.md"                    # 说明文档路径
license = "MIT"                         # 开源许可证
keywords = ["config", "converter", "json", "yaml", "toml"]
categories = ["command-line-utilities"]

[dependencies]
# clap: Rust 最流行的命令行参数解析库
# derive feature: 启用 #[derive(Parser)] 宏
clap = { version = "4.5", features = ["derive"] }

# 发布构建优化（可选）
[profile.release]
strip = true    # 移除调试符号，减小二进制体积
lto = true      # 链接时优化，提升性能但编译变慢
