[package]
name = "confconv"
version = "0.1.0"
edition = "2021"
description = "配置文件格式转换工具"
license = "MIT"
keywords = ["cli", "config", "json", "yaml", "toml"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"

# 优化发布构建
[profile.release]
strip = true      # 去除调试符号
lto = true        # 链接时优化
